# discord-time-app

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  test-certificate.b64  vite.config.ts
.claude/: settings.local.json
api/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  quick-test.js  setup.sh  test-api.sh  tsconfig.json  usage.db
docker/: temporal-ir-qwen35.Dockerfile
docs/: API_IMPLEMENTATION_PLAN.md  BACKEND_API_SETUP.md  FRONT_END_API_INTEGRATION_IMPLEMENTATION_PLAN.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_PLAN.md  PRODUCTIONIZATION_IMPLEMENTATION_PLAN.md  PRODUCTION_DEPLOYMENT.md  PROGRESS.md  temporal-architecture-benchmark-checklist.md  temporal-coalescing-backlog.md  temporal-coalescing-v1.md  temporal-evals.md  temporal-generation-ledger.md  temporal-hosted-model-deployment.md  temporal-hosted-slm-journey.md  temporal-local-model-deployment.md  temporal-ml-experiment-plan.md  temporal-model-benchmark-log.md  temporal-model-upgrade-experiment.md  temporal-parser-cascade-architecture.md  temporal-permutation-data-strategy.md  temporal-plan-ir-audit.md  temporal-prior-art.md  temporal-slm-release-backlog.md  temporal-timezone-support-plan.md
scripts/: check-store-simple.ps1  create-test-certificate.ps1  dev-hammer-overlay.ps1  prepare-api-sidecar.mjs  reload-local-parser-api.ps1  start-temporal-ir-training-container.ps1  start-temporal-ir-training.ps1  start-temporal-peft-server-container.ps1  (+1 more)
(+76 files in other folders)
