[project]
name = "hammer-overlay-temporal-ml"
version = "0.1.0"
description = "Python tooling for HammerOverlay Temporal Plan-IR experiments."
requires-python = ">=3.12,<3.13"
dependencies = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[dependency-groups]
temporal-ir-unsloth = [
  "accelerate==1.13.0",
  "bitsandbytes==0.49.2",
  "datasets==4.3.0",
  "matplotlib==3.10.9",
  "peft==0.19.1",
  "torch==2.9.1",
  "torchvision==0.24.1",
  "transformers==5.5.0",
  "trl==0.24.0",
  "unsloth==2026.5.8",
  "wandb==0.27.0",
  "xformers==0.0.33.post2",
]
temporal-ir-hosted = [
  "huggingface-hub>=0.34.0",
  "modal>=1.2.0",
  "openai>=2.0.0",
  "requests>=2.32.0",
  "runpod>=1.7.0",
]
temporal-ir-peft-server = [
  "accelerate>=1.13.0",
  "bitsandbytes>=0.49.2",
  "huggingface-hub>=0.34.0",
  "peft>=0.18.0",
  "runpod>=1.7.0",
  "transformers>=4.51.3,<=5.5.0",
]
temporal-ir-qwen35-fastpath = [
  "causal-conv1d==1.6.2.post1",
  "flash-linear-attention==0.5.0",
]
